--- a/src/AppBundle/Resources/views/map/index.html.twig
+++ b/src/AppBundle/Resources/views/map/index.html.twig
@@ -2,5 +2,12 @@
 
 {% block body %}
     <h1>Proof of concept : Map</h1>
-    <div id="google-map"></div>
+    <div id="google-map" style="width: 100%; height: 400px; border:1px solid black;"></div>
+{% endblock %}
+
+{% block inline_javascripts %}
+    {{ parent() }}
+    <script src="https://maps.googleapis.com/maps/api/js?sensor=false&key=AIzaSyDGXvYsnnz5wawPSOZBygS6KwAwXAVVKgk">
+    </script>
+    <script type="text/javascript" src="{{ asset('bundles/app/js/view-map.js') }}"></script>
 {% endblock %}
