--- a/src/AppBundle/Resources/views/map/index.html.twig
+++ b/src/AppBundle/Resources/views/map/index.html.twig
@@ -1,13 +1,16 @@
 {% extends '@App/base.html.twig' %}
 
-{% block body %}
-    <h1>Proof of concept : Map</h1>
-    <div id="google-map" style="width: 100%; height: 400px; border:1px solid black;"></div>
+{% block container %}
+    <div id="map-container">
+        <div id="google-map"></div>
+    </div>
 {% endblock %}
 
 {% block inline_javascripts %}
     {{ parent() }}
+    <script type="text/javascript" src="{{ asset('bundles/app/js/Autolinker.min.js') }}"></script>
     <script src="https://maps.googleapis.com/maps/api/js?sensor=false&key=AIzaSyDGXvYsnnz5wawPSOZBygS6KwAwXAVVKgk">
     </script>
+    <script type="text/javascript" src="{{ asset('bundles/app/js/templates/info-window.js') }}"></script>
     <script type="text/javascript" src="{{ asset('bundles/app/js/view-map.js') }}"></script>
 {% endblock %}
