--- a/src/AppBundle/Resources/views/admin/index.html.twig
+++ b/src/AppBundle/Resources/views/admin/index.html.twig
@@ -2,6 +2,11 @@
 
 {% block body %}
     <div class="row">
+        <div class="col-sm-8 col-sm-offset-2 text-right">
+            <a class="btn btn-sm btn-success" href="{{ url('admin_edit') }}">Add a contribution</a>
+        </div>
+    </div>
+    <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
             <table class="table table-hover table-condensed">
                 <thead>
