--- a/src/AppBundle/Resources/public/css/main.css
+++ b/src/AppBundle/Resources/public/css/main.css
@@ -1,13 +1,23 @@
 #map-container {
-    position: absolute;
-    top: 50px;
-    left: 0;
-    bottom: O;
+    height: 100%;
     width: 100%;
     z-index: -10;
+    padding-bottom: 50px;
+}
+
+html, body {
+    height: 100%;
+}
+
+body.map {
+    overflow: hidden;
 }
 
 #google-map {
     width: 100%;
-    height: 500px;
+    height: 100%;
+}
+
+.navbar {
+    margin: 0;
 }
