--- a/src/AppBundle/Resources/views/map/index.html.twig
+++ b/src/AppBundle/Resources/views/map/index.html.twig
@@ -14,3 +14,5 @@
     <script type="text/javascript" src="{{ asset('bundles/app/js/templates/info-window.js') }}"></script>
     <script type="text/javascript" src="{{ asset('bundles/app/js/view-map.js') }}"></script>
 {% endblock %}
+
+{% block inline_bodyclass %}map{% endblock %}
