--- a/src/AppBundle/Resources/views/admin/index.html.twig
+++ b/src/AppBundle/Resources/views/admin/index.html.twig
@@ -1,7 +1,7 @@
 {% extends '@App/base.html.twig' %}
 
 {% block body %}
-    <div class="row">
+    <div class="row" style="margin-top: 15px;">
         <div class="col-sm-8 col-sm-offset-2 text-right">
             <a class="btn btn-sm btn-success" href="{{ url('admin_edit') }}">Add a contribution</a>
         </div>
