--- a/src/AppBundle/Resources/public/css/main.css
+++ b/src/AppBundle/Resources/public/css/main.css
@@ -20,4 +20,15 @@ body.map {
 
 .navbar {
     margin: 0;
+    border-radius: 0;
+}
+
+.navbar-brand>img {
+    width: 40px;
+}
+
+.navbar-brand {
+    padding: 0;
+    padding-top: 5px;
+    margin-right: 15px;
 }
