xcider : everyone can cluster

--- a/src/AppBundle/Resources/views/map/index.html.twig
+++ b/src/AppBundle/Resources/views/map/index.html.twig
@@ -12,6 +12,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?sensor=false&key=AIzaSyDGXvYsnnz5wawPSOZBygS6KwAwXAVVKgk">
     </script>
     <script type="text/javascript" src="{{ asset('bundles/app/js/templates/info-window.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('bundles/app/js/markerclusterer_compiled.js') }}"></script>
     <script type="text/javascript" src="{{ asset('bundles/app/js/view-map.js') }}"></script>
 {% endblock %}
 
