fix user_type with a coup de gnole

--- a/src/AppBundle/Resources/public/css/main.css
+++ b/src/AppBundle/Resources/public/css/main.css
@@ -71,14 +71,19 @@ a.btn-home {
 }
 .iw-img img {
     margin: 0 auto;
-    width: 100%;
     max-height: 400px;
+    width: 100%;
+    height: auto;
 }
 
 .iw-content {
+    padding: 2px 4px;
+    text-align: justify;
+}
+
+.community .iw-content {
     background-color: #0088CC;
     color: white;
-    padding: 2px 4px;
 }
 
 .iw-content a {
