--- a/src/AppBundle/Resources/public/css/main.css
+++ b/src/AppBundle/Resources/public/css/main.css
@@ -90,3 +90,15 @@ a.btn-home {
     color: white;
     text-decoration: underline;
 }
+
+.myInfobox {
+    border: solid 1px black;
+    background-color:whitesmoke;
+    width: 300px;
+    color: #000;
+    font-size: 10px;
+    padding: .5em 1em;
+    border-radius: 2px;
+    margin-left: -30px;
+    margin-top: -6px
+}
