--- a/src/AppBundle/Resources/views/map/index.html.twig
+++ b/src/AppBundle/Resources/views/map/index.html.twig
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="{{ asset('bundles/app/js/Autolinker.min.js') }}"></script>
     <script src="https://maps.googleapis.com/maps/api/js?sensor=false&key=AIzaSyDGXvYsnnz5wawPSOZBygS6KwAwXAVVKgk">
     </script>
+    <script src="http://google-maps-utility-library-v3.googlecode.com/svn/trunk/infobox/src/infobox.js"></script>
     <script type="text/javascript" src="{{ asset('bundles/app/js/templates/info-window.js') }}"></script>
     <script type="text/javascript" src="{{ asset('bundles/app/js/markerclusterer_compiled.js') }}"></script>
     <script type="text/javascript" src="{{ asset('bundles/app/js/view-map.js') }}"></script>
