--- a/src/AppBundle/Resources/public/css/main.css
+++ b/src/AppBundle/Resources/public/css/main.css
@@ -97,7 +97,7 @@ a.btn-home {
     width: 300px;
     color: #000;
     font-size: 10px;
-    padding: .5em 1em;
+    padding: 0;
     border-radius: 2px;
     margin-left: -30px;
     margin-top: -6px
