--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -30,7 +30,8 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="{{ url('map_index') }}">Map</a></li>
+                <li class="active"><a href="{{ url('gallery_index') }}">Gallery</a></li>
+                <li><a href="{{ url('map_index') }}">Map</a></li>
                 <li><a href="{{ url('admin_index') }}">Admin</a></li>
             </ul>
         </div>
