clearbox up n runnin ! SAKE !

--- a/src/AppBundle/Resources/public/css/main.css
+++ b/src/AppBundle/Resources/public/css/main.css
@@ -91,7 +91,7 @@ a.btn-home {
     color: white;
 }
 
-.iw-content a {
+.community .iw-content a {
     color: white;
     text-decoration: underline;
 }
