--- a/src/AppBundle/Resources/views/home/index.html.twig
+++ b/src/AppBundle/Resources/views/home/index.html.twig
@@ -27,7 +27,7 @@
                     </div>
                     <div class="row">
                         <div class="col-xs-6 text-right">
-                            <a class="btn-home" href="#">
+                            <a class="btn-home" href="{{ url('gallery_index') }}">
                                 <img height="70" src="{{ asset('bundles/app/img/picture-home.png') }}" alt=""/>
                             </a>
                         </div>
