malibu: styling partners

--- a/src/AppBundle/Resources/views/map/index.html.twig
+++ b/src/AppBundle/Resources/views/map/index.html.twig
@@ -1,6 +1,18 @@
 {% extends '@App/base.html.twig' %}
 
 {% block container %}
+    {#<div class="iw-panel partner">#}
+        {#<div class="iw-img text-right">#}
+            {#<a href="#">#}
+                {#<img src="/media/20150904_183112 (1).jpg" class="img-responsive img-infowindow"/>#}
+            {#</a>#}
+            {#<span class="iw-usertype label label-default">Partner</span>#}
+        {#</div>#}
+        {#<div class="iw-content">#}
+            {#Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque cupiditate deleniti doloribus esse est et illum laborum natus nemo nesciunt nisi nostrum, porro possimus reiciendis, rem temporibus velit voluptates. Distinctio.#}
+        {#</div>#}
+        {#<div class="clearfix"></div>#}
+    {#</div>#}
     <div id="map-container">
         <div id="google-map"></div>
     </div>
