--- a/src/AppBundle/Resources/public/css/main.css
+++ b/src/AppBundle/Resources/public/css/main.css
@@ -83,7 +83,32 @@ a.btn-home {
 
 .iw-content {
     padding: 4px 8px;
-    text-align: justify;
+}
+
+.partner.iw-panel {
+    padding: 5px;
+    border-bottom: 4px solid #d36050;
+}
+.partner .iw-img {
+    float: left;
+    margin: 0;
+    width: 150px;
+}
+.partner .iw-img img {
+    margin: 0 auto;
+    min-width: 150px;
+    max-width: 100%;
+}
+
+.partner .iw-content {
+    width: 335px;
+    margin-left: 150px;
+    padding: 0 0 0 5px;
+}
+.partner .iw-usertype {
+    margin-top: 5px;
+    display: inline-block;
+    background: #d36050;
 }
 
 .community .iw-content {
