--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -24,15 +24,17 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="{{ url('home_index') }}">
                 <img src="{{ asset('bundles/app/img/logo-pim-terrestre.png') }}" alt=""/>
             </a>
         </div>
+        {% set currentRoute = app.request.attributes.get('_route') %}
+
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="{{ url('gallery_index') }}">Gallery</a></li>
-                <li><a href="{{ url('map_index') }}">Map</a></li>
-                <li><a href="{{ url('admin_index') }}">Admin</a></li>
+                <li class="{{ ('gallery_index' == currentRoute) ? 'active' : '' }}"><a href="{{ url('gallery_index') }}">Gallery</a></li>
+                <li class="{{ ('map_index' == currentRoute) ? 'active' : '' }}"><a href="{{ url('map_index') }}">Map</a></li>
+                <li class="{{ ('admin_index' == currentRoute) ? 'active' : '' }}"><a href="{{ url('admin_index') }}">Admin</a></li>
             </ul>
         </div>
     </div>
