--- a/src/AppBundle/Resources/views/map/index.html.twig
+++ b/src/AppBundle/Resources/views/map/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block container %}
     {#<div class="iw-panel partner">#}
-        {#<div class="iw-img text-right">#}
+        {#<div class="iw-img text-center">#}
             {#<a href="#">#}
                 {#<img src="/media/20150904_183112 (1).jpg" class="img-responsive img-infowindow"/>#}
             {#</a>#}
