villageoise : rename home

--- a/src/AppBundle/Resources/views/home/index.html.twig
+++ b/src/AppBundle/Resources/views/home/index.html.twig
@@ -22,7 +22,7 @@
                 <div class="white text-center">
                     <div class="row">
                         <div class="col-xs-12">
-                            <h1>Akeneo around the world</h1>
+                            <h1>#AkeneoAroundTheWorld</h1>
                         </div>
                     </div>
                     <div class="row">
